force-app/main/default/objects/bofc__BOFCVRules__c/bofc__BOFCVRules__c.object-meta.xml
<CustomObject>
    <label>BOFCVRules</label>
    <nameField>
        <displayFormat>BVR-{0000}</displayFormat>
        <label>BOFCVRules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCVRules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>