force-app/main/default/objects/bofc__BOFCVRules__c/fields/bofc__Action__c.field-meta.xml
<CustomField>
    <fullName>bofc__Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>