force-app/main/default/objects/bofc__BOFCVRules__c/fields/bofc__active__c.field-meta.xml
<CustomField>
    <fullName>bofc__active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>active</label>
    <type>Checkbox</type>
</CustomField>