force-app/main/default/objects/bofc__BOFCVRules__c/fields/bofc__description__c.field-meta.xml
<CustomField>
    <fullName>bofc__description__c</fullName>
    <label>description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>