force-app/main/default/objects/bofc__BOFCVRules__c/fields/bofc__fullName__c.field-meta.xml
<CustomField>
    <fullName>bofc__fullName__c</fullName>
    <label>fullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>