force-app/main/default/objects/bofc__BOFCVRules__c/fields/bofc__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>bofc__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>