force-app/main/default/objects/bofc__BOFCVRules__c/fields/bofc__OName__c.field-meta.xml
<CustomField>
    <fullName>bofc__OName__c</fullName>
    <label>OName</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>