force-app/main/default/objects/bofc__BOFCVRules__c/fields/bofc__OrgName__c.field-meta.xml
<CustomField>
    <fullName>bofc__OrgName__c</fullName>
    <label>OrgName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>