force-app/main/default/objects/bofc__BOFCVRules__c/fields/bofc__RuleName__c.field-meta.xml
<CustomField>
    <fullName>bofc__RuleName__c</fullName>
    <label>RuleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>